--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
       </div>
     </div>
   </main>
-  <footer></footer>
+  <footer>
+  <!-- Alhamdulillah -->
+  </footer>
 
   <!-- add javascript  file  -->
   <script src="./js/app.js"></script>
